--- a/core/templates/vista_lluvia.html
+++ b/core/templates/vista_lluvia.html
@@ -21,12 +21,8 @@
           <div class="form-group row d-flex">
             <label class="col-sm-3 col-form-label">Campo</label>
             <div class="col-sm-9 d-flex">
-              <select id="id_campo" class="form-control">
-                <option value="*" selected="selected">Seleccionar campo</option>
-                {% for campo in campos %}
-                  <option value="{{ campo.id }}">{{ campo.nombre }}</option>
-                {% endfor %}
-              </select>
+              {{form.campo}}
+              {{form.campo.errors}}
             </div>
           </div>
         </div>
@@ -34,13 +30,9 @@
         </div>
         <div class="col-4">
           <div class="form-group d-flex align-items-center">
-            <label for="ano" class="mr-2">Seleccione el año:</label>
-            <select id="ano" name="ano" class="form-control">
-              <option value="" {% if not ano_filter %}selected{% endif %} disabled>Seleccionar año</option>
-              <option value="2021" {% if ano_filter == "2021" %}selected{% endif %}>2021</option>
-              <option value="2022" {% if ano_filter == "2022" %}selected{% endif %}>2022</option>
-              <option value="2023" {% if ano_filter == "2023" %}selected{% endif %}>2023</option>
-            </select>
+            <label for="id_anio" class="mr-2">Seleccione el año:</label>
+            {{form.anio}}
+            {{form.anio.erros}}
           </div>
         </div>
 
@@ -113,7 +105,7 @@
   var meses = ['Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio', 'Julio', 'Agosto', 'Septiembre', 'Octubre', 'Noviembre', 'Diciembre'];
 
   var tabla = document.querySelector('#tabla_lluvia tbody');
-  var anoSelect = document.getElementById('ano');
+  var anoSelect = document.getElementById('id_anio');
   var campoSelect = document.getElementById("id_campo");
   registrosLluvia = {}
  
@@ -343,8 +335,8 @@ celdasLluvia.forEach(function(celda) {
   }
 
   function refresh_table() {
-    if (id_campo.value != "*" && ano.value != "") 
-      ajax_actualizar(id_campo.value, ano.value);
+    if (id_campo.value != "*" && id_anio.value != "") 
+      ajax_actualizar(id_campo.value, id_anio.value);
       registrosLluvia = {};// romper la matriz
   }
   window.addEventListener('load', async() => {
@@ -355,7 +347,7 @@ celdasLluvia.forEach(function(celda) {
       dehabilitarColorCelda();
     });
 
-    ano.addEventListener('change', async() => {
+    id_anio.addEventListener('change', async() => {
       refresh_table();  
       deshabilitarBotonGuardar();
       dehabilitarColorCelda();
