--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -10,30 +10,6 @@
     <div class="row">
       <div class="col-12 col-xl-8 mb-4 mb-xl-0">
         <h3 class="font-weight-bold col-10 col-xl-6 mb-5 mb-xl-0">Bienvenido {{ user.get_full_name }}</h3>
-        <form class="form-sample" method="post" enctype="multipart/form-data">
-          {% csrf_token %}
-          {{ form.non_field_errors }}
-          <div class="col-12 d-flex mt-5">
-            <div class="form-group row d-flex col-sm-6">
-              <div class="col-sm-9 d-flex">
-                <select id="campo" class="form-control">
-                  <option value="*" selected="selected">Seleccionar campo</option>
-                  {% for campo in campos %}
-                    <option value="{{ campo.id }}">{{ campo.nombre }}</option>
-                  {% endfor %}
-                </select>
-              </div>
-            </div>
-            <div class="form-group d-flex align-items-center col-sm-6">
-              <select id="ano" name="ano" class="form-control">
-                <option value="" {% if not ano_filter %}selected{% endif %} disabled>Seleccionar año</option>
-                <option value="2021" {% if ano_filter == "2021" %}selected{% endif %}>2021</option>
-                <option value="2022" {% if ano_filter == "2022" %}selected{% endif %}>2022</option>
-                <option value="2023" {% if ano_filter == "2023" %}selected{% endif %}>2023</option>
-              </select>
-            </div>
-          </div>
-       </form>
       </div>
     </div>
   </div>
@@ -100,6 +76,30 @@
       </div>
     </div>
   </div>
+  <form class="form-sample" method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ form.non_field_errors }}
+    <div class="row mt-4 align-items-center">
+      <div class="col-6 col-sm-6">
+        <div class="form-group row d-flex align-items-center">
+          <label class="col-6 col-sm-4 ms-3 col-form-label">Seleccione un campo</label>
+          <div class="col-6 col-sm-6 d-flex">
+            {{ form.campo }}
+            {{ form.campo.errors }}
+          </div>
+        </div>
+      </div>
+      <div class="col-6 col-sm-6">
+        <div class="form-group row d-flex align-items-center">
+          <label for="id_anio" class="col-6 col-sm-4 col-form-label">Seleccione el año:</label>
+          <div class="col-6 col-sm-6 d-flex">
+            {{ form.anio }}
+            {{ form.anio.errors }}
+          </div>
+        </div>
+      </div>
+    </div> 
+ </form>
   <div class="row">
     <div class="col-md-12 grid-margin stretch-card">
       <div class="card position-relative">
@@ -709,7 +709,36 @@
         texto_grafico2 +='</div>'
       }
     texto_grafico2 += '</div>'
-    
+  
+    function ajax_actualizar(campo, anio) {
+      $.ajax({
+        url : "{% url 'ajax_load_lluvias' %}",
+        data : {
+          'empresa': {{empresa.id}},
+          'campo' : campo ,
+          'anio' : anio,
+        },
+        method : 'GET',
+        success : function(response) {
+          for (var i = 2; i < 14; i++) {
+            for( var j = 1; j < 32; j++) {
+              var celda = tabla_lluvia.rows[i].cells[j];
+              celda.innerHTML = 0;
+            }
+          }        
+          response.data.forEach(function(item, index) {
+            armar_tabla( item );
+          });
+  
+        },
+        error: function(xhr, status, error) {
+          // La función que se ejecutará si ocurre un error en la solicitud
+          console.log('Error en la solicitud');
+          console.log(xhr.responseText);
+        }
+  
+      });
+    }  
   
   </script>
 
