--- a/core/templates/vista_lluvia.html
+++ b/core/templates/vista_lluvia.html
@@ -297,6 +297,8 @@ celdasLluvia.forEach(function(celda) {
 
     // Aca se envia la lista de objetos.
     xhr.send(jsonData);
+    deshabilitarBotonGuardar();
+    dehabilitarColorCelda();
     
   });
 
