--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -35,46 +35,40 @@
     </div>
     <div class="col-md-6 grid-margin transparent">
       <div class="row">
-        <div class="col-md-6 mb-4 stretch-card transparent">
-          <div class="card card-tale">
-            <div class="card-body"> armar con un for 
-              <p class="mb-4">Campo 01</p>
-              <p class="fs-30 mb-2">150 Ha - Trigo -</p>
-              <p>Fecha sde Siembra: 25/07/2023</p>
+        {% for campo in campos_con_lotes_1 %}
+            <div class="col-md-6 mb-4 mb-lg-0 stretch-card transparent">
+                {% if forloop.counter == 1 %}
+                    <div class="card card-light-blue">
+                {% elif forloop.counter == 2 %}
+                    <div class="card card-light-danger">
+                {% endif %}
+                    <div class="card-body">
+                        <p class="mb-4">{{ campo.campo.nombre }}</p>
+                        <p class="fs-30 mb-2">{{ campo.lotes.0.ha_productivas }}</p>
+                        <p>{{ campo.lotes.0.ha_totales }} ({{ campo.lotes.0.porcentaje }}%)</p>
+                    </div>
+                </div>
             </div>
-          </div>
-        </div>
-        <div class="col-md-6 mb-4 stretch-card transparent">
-          <div class="card card-dark-blue">
-            <div class="card-body">
-              <p class="mb-4">Campo 02</p>
-              <p class="fs-30 mb-2">150 Ha - Trigo</p>
-              <p>Fecha sde Siembra: 20/10/2023</p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-6 mb-4 mb-lg-0 stretch-card transparent">
-          <div class="card card-light-blue">
-            <div class="card-body">
-              <p class="mb-4">Number of Meetings</p>
-              <p class="fs-30 mb-2">34040</p>
-              <p>2.00% (30 days)</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-6 stretch-card transparent">
-          <div class="card card-light-danger">
-            <div class="card-body">
-              <p class="mb-4">Number of Clients</p>
-              <p class="fs-30 mb-2">47033</p>
-              <p>0.22% (30 days)</p>
-            </div>
-          </div>
-        </div>
-      </div>
+        {% endfor %}
     </div>
+    <div class="row">
+      {% for campo in campos_con_lotes_1 %}
+          <div class="col-md-6 mb-4 mb-lg-0 stretch-card transparent">
+              {% if forloop.counter == 1 %}
+                  <div class="card card-tale">
+              {% elif forloop.counter == 2 %}
+                  <div class="card card-dark-blue">
+              {% endif %}
+                  <div class="card-body">
+                      <p class="mb-4">{{ campo.campo.nombre }}</p>
+                      <p class="fs-30 mb-2">{{ campo.lotes.0.ha_productivas }}</p>
+                      <p>{{ campo.lotes.0.ha_totales }} ({{ campo.lotes.0.porcentaje }}%)</p>
+                  </div>
+              </div>
+          </div>
+      {% endfor %}
+    </div>  
+  </div>
   </div>
   <div class="row">
     <div class="col-md-12 grid-margin stretch-card">
