--- a/core/templates/nav_home.html
+++ b/core/templates/nav_home.html
@@ -38,6 +38,7 @@
         <li class="nav-item"> <a class="nav-link" href="\03">Costo de produccion</a></li>
         <li class="nav-item"> <a class="nav-link" href="\05">Planificacion</a></li>
         <li class="nav-item"> <a class="nav-link" href="\04">Campañas</a></li>
+        <li class="nav-item"> <a class="nav-link" href="\estado-lote">Estado lote</a></li>
         <li class="nav-item"> <a class="nav-link" href="\trazabilidad">Trazabilidad</a></li>
       </ul>
     </div>
