--- a/core/templates/vista_estado_lote.html
+++ b/core/templates/vista_estado_lote.html
@@ -37,7 +37,7 @@
                     <div onclick="window.location.href='/asign-lote/{{estado.lote.id}}';" class="card {% if forloop.counter0|add:'0'|divisibleby:4 %}card-tale{% endif %}{% if forloop.counter0|add:'-1'|divisibleby:4 %}card-dark-blue{% endif %}{% if forloop.counter0|add:'-2'|divisibleby:4 %}card-light-blue{% endif %}{% if forloop.counter0|add:'-3'|divisibleby:4 %}card-light-danger{% endif %}">
                       <div class="card-body">
                         <p class="mb-4">Campo: {{ estado.lote.campo.nombre }} - Lote: {{estado.lote.nombre}}</p>
-                        {% if encontre %}
+                        {% if estado.encontre %}
                           <p class="fs-30 mb-2">{{ estado.estado.cultivo.nombre }}</p>
                         {% else %}
                           <p class="fs-30 mb-2">Sin cultivo</p>
