--- a/core/templates/vista_asign_lote.html
+++ b/core/templates/vista_asign_lote.html
@@ -62,7 +62,7 @@
         {% else %}
         <button type="submit" name='ok' class="btn btn-primary mr-2">Nuevo</button>
         {% endif %}
-        <button type='button' class="btn btn-dark" onclick="window.location.href='/02';">Cancel</button>
+        <button type='button' class="btn btn-dark" onclick="window.location.href='/estado-lote';">Cancel</button>
 
       </form>
 
